k3s/deploy-account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '8'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mgo2-account","namespace":"mgo2"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mgo2-account"}},"template":{"metadata":{"labels":{"app":"mgo2-account"}},"spec":{"containers":[{"env":[{"name":"LOBBY_NAME","value":"ACCOUNT"},{"name":"LOBBY_PORT","value":"5732"}],"image":"ghcr.io/miguelripoll23/mgo2-server/mgo2-account-lobby-server:latest","name":"account" [...]

      '
  creationTimestamp: '2026-09-19T01:05:10Z'
  generation: 8
  name: mgo2-account
  namespace: mgo2
  resourceVersion: '24832'
  uid: 65b56d0a-749c-43e7-a291-d96ae762444f
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mgo2-account
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-19T04:45:13+02:00'
      labels:
        app: mgo2-account
    spec:
      containers:
      - env:
        - name: LOBBY_NAME
          value: ACCOUNT
        - name: LOBBY_PORT
          value: '5732'
        image: ghcr.io/miguelripoll23/mgo2-server/mgo2-account-lobby-server:latest
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5
        name: account
        ports:
        - containerPort: 5732
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 5732
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/appsettings.json
          name: appsettings
          readOnly: true
          subPath: appsettings.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 21600
      volumes:
      - name: appsettings
        configMap:
          name: mgo2-appsettings
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: '2026-09-19T01:05:32Z'
    lastUpdateTime: '2026-09-19T01:05:32Z'
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: 'True'
    type: Available
  - lastTransitionTime: '2026-09-19T01:05:10Z'
    lastUpdateTime: '2026-09-19T11:24:59Z'
    message: ReplicaSet "mgo2-account-5b657c74c9" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: 'True'
    type: Progressing
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
