k3s/deploy-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '9'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mgo2-dns","namespace":"mgo2"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mgo2-dns"}},"template":{"metadata":{"labels":{"app":"mgo2-dns"}},"spec":{"containers":[{"image":"ghcr.io/miguelripoll23/mgo2-server/mgo2-dns:latest","name":"dns","ports":[{"containerPort":53,"protocol":"UDP"}],"securityContext":{"allowPrivilegeEscalation":false,"capabilities":{" [...]

      '
  creationTimestamp: '2026-09-19T01:05:10Z'
  generation: 9
  name: mgo2-dns
  namespace: mgo2
  resourceVersion: '24670'
  uid: 3e79d6db-046a-4a97-9421-b32775e16509
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mgo2-dns
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-19T04:45:14+02:00'
      labels:
        app: mgo2-dns
    spec:
      containers:
      - image: ghcr.io/miguelripoll23/mgo2-server/mgo2-dns:latest
        imagePullPolicy: Always
        name: dns
        ports:
        - containerPort: 53
          protocol: UDP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/appsettings.json
          name: appsettings
          readOnly: true
          subPath: appsettings.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: appsettings
        configMap:
          name: mgo2-appsettings
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: '2026-09-19T01:05:33Z'
    lastUpdateTime: '2026-09-19T01:05:33Z'
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: 'True'
    type: Available
  - lastTransitionTime: '2026-09-19T01:05:10Z'
    lastUpdateTime: '2026-09-19T11:24:42Z'
    message: ReplicaSet "mgo2-dns-6f7cd94b99" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: 'True'
    type: Progressing
  observedGeneration: 9
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
