k3s/deploy-free-battle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgo2-free-battle
  namespace: mgo2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mgo2-free-battle
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-19T04:45:14+02:00'
      labels:
        app: mgo2-free-battle
    spec:
      containers:
      - env:
        - name: LOBBY_NAME
          value: Free Battle
        - name: LOBBY_SUBTYPE
          value: FREE BATTLE
        - name: LOBBY_PORT
          value: '5733'
        - name: LOBBY_BEGINNER_ONLY
          value: 'false'
        - name: LOBBY_EXPANSION_ONLY
          value: 'false'
        - name: LOBBY_NO_HEADSHOT
          value: 'false'
        - name: LOBBY_REPLAYS_ONLY
          value: 'false'
        image: ghcr.io/miguelripoll23/mgo2-server/mgo2-game-lobby-server:latest
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5
        name: lobby
        ports:
        - containerPort: 5733
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 5733
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/appsettings.json
          name: appsettings
          readOnly: true
          subPath: appsettings.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 21600
      volumes:
      - name: appsettings
        configMap:
          name: mgo2-appsettings
