k3s/deploy-gameplay-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgo2-gameplay-1
  namespace: mgo2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mgo2-gameplay-1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-19T04:45:15+02:00'
      labels:
        app: mgo2-gameplay-1
    spec:
      containers:
      - env:
        - name: GAMEPLAY_SERVER_PORT
          value: '5730'
        - name: GAMEPLAY_SERVER_LOBBY_NAME
          value: Free Battle
        image: ghcr.io/miguelripoll23/mgo2-server/mgo2-gameplay-server:latest
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5
        name: gameplay
        ports:
        - containerPort: 5730
          protocol: UDP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - timeout 2 bash -c 'echo > /dev/udp/127.0.0.1/5730'
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/appsettings.json
          name: appsettings
          readOnly: true
          subPath: appsettings.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 21600
      volumes:
      - name: appsettings
        configMap:
          name: mgo2-appsettings
