k3s/deploy-gate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '8'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"mgo2-gate"},"name":"mgo2-gate","namespace":"mgo2"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mgo2-gate"}},"template":{"metadata":{"labels":{"app":"mgo2-gate"}},"spec":{"containers":[{"env":[{"name":"LOBBY_NAME","value":"GATE"},{"name":"LOBBY_PORT","value":"5731"}],"image":"ghcr.io/miguelripoll23/mgo2-server/mgo2-gate-lobby-server:latest","n [...]

      '
  creationTimestamp: '2026-09-19T01:05:10Z'
  generation: 8
  labels:
    app: mgo2-gate
  name: mgo2-gate
  namespace: mgo2
  resourceVersion: '24973'
  uid: 71739760-3f08-4b57-9427-3c5dea590d5c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mgo2-gate
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-19T04:45:15+02:00'
      labels:
        app: mgo2-gate
    spec:
      containers:
      - env:
        - name: LOBBY_NAME
          value: GATE
        - name: LOBBY_PORT
          value: '5731'
        image: ghcr.io/miguelripoll23/mgo2-server/mgo2-gate-lobby-server:latest
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5
        name: gate
        ports:
        - containerPort: 5731
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 5731
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/appsettings.json
          name: appsettings
          readOnly: true
          subPath: appsettings.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 21600
      volumes:
      - name: appsettings
        configMap:
          name: mgo2-appsettings
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: '2026-09-19T01:05:33Z'
    lastUpdateTime: '2026-09-19T01:05:33Z'
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: 'True'
    type: Available
  - lastTransitionTime: '2026-09-19T01:42:56Z'
    lastUpdateTime: '2026-09-19T11:25:08Z'
    message: ReplicaSet "mgo2-gate-574d64bb4b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: 'True'
    type: Progressing
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
