k3s/deploy-survival.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '8'
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"mgo2-survival","namespace":"mgo2"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mgo2-survival"}},"template":{"metadata":{"labels":{"app":"mgo2-survival"}},"spec":{"containers":[{"env":[{"name":"LOBBY_NAME","value":"Survival"},{"name":"LOBBY_SUBTYPE","value":"SURVIVAL"},{"name":"LOBBY_PORT","value":"5735"},{"name":"LOBBY_BEGINNER_ONLY","value":"false"}, [...]

      '
  creationTimestamp: '2026-09-19T01:05:10Z'
  generation: 8
  name: mgo2-survival
  namespace: mgo2
  resourceVersion: '25053'
  uid: 105bc012-1edd-4d38-a3d6-0348ec86c4ab
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mgo2-survival
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-09-19T04:45:17+02:00'
      labels:
        app: mgo2-survival
    spec:
      containers:
      - env:
        - name: LOBBY_NAME
          value: Survival
        - name: LOBBY_SUBTYPE
          value: SURVIVAL
        - name: LOBBY_PORT
          value: '5735'
        - name: LOBBY_BEGINNER_ONLY
          value: 'false'
        - name: LOBBY_EXPANSION_ONLY
          value: 'false'
        - name: LOBBY_NO_HEADSHOT
          value: 'false'
        - name: LOBBY_REPLAYS_ONLY
          value: 'false'
        image: ghcr.io/miguelripoll23/mgo2-server/mgo2-game-lobby-server:latest
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 5
        name: lobby
        ports:
        - containerPort: 5735
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 5735
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/appsettings.json
          name: appsettings
          readOnly: true
          subPath: appsettings.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 21600
      volumes:
      - name: appsettings
        configMap:
          name: mgo2-appsettings
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: '2026-09-19T01:05:32Z'
    lastUpdateTime: '2026-09-19T01:05:32Z'
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: 'True'
    type: Available
  - lastTransitionTime: '2026-09-19T02:11:40Z'
    lastUpdateTime: '2026-09-19T11:25:22Z'
    message: ReplicaSet "mgo2-survival-5b7c6c4fc6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: 'True'
    type: Progressing
  observedGeneration: 8
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
