k3s/svc-account.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mgo2-account","namespace":"mgo2"},"spec":{"ports":[{"port":5732,"protocol":"TCP","targetPort":5732}],"selector":{"app":"mgo2-account"},"type":"ClusterIP"}}
  creationTimestamp: "2026-09-19T01:05:13Z"
  name: mgo2-account
  namespace: mgo2
  resourceVersion: "2160"
  uid: 957fbc44-3c8b-49ce-975e-1943643e4fea
spec:
  clusterIP: 10.43.162.230
  clusterIPs:
  - 10.43.162.230
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5732
    protocol: TCP
    targetPort: 5732
  selector:
    app: mgo2-account
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
