k3s/svc-automatching.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-automatching
  namespace: mgo2
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5740
    protocol: TCP
    targetPort: 5740
  selector:
    app: mgo2-automatching
  sessionAffinity: None
  type: LoadBalancer
