k3s/svc-basic-training.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mgo2-basic-training","namespace":"mgo2"},"spec":{"ports":[{"port":5737,"protocol":"TCP","targetPort":5737}],"selector":{"app":"mgo2-basic-training"},"type":"ClusterIP"}}
  creationTimestamp: "2026-09-19T01:05:14Z"
  name: mgo2-basic-training
  namespace: mgo2
  resourceVersion: "2200"
  uid: cc9cdd7c-4daa-4a34-a15a-d81583bbfd65
spec:
  clusterIP: 10.43.62.111
  clusterIPs:
  - 10.43.62.111
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5737
    protocol: TCP
    targetPort: 5737
  selector:
    app: mgo2-basic-training
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
