k3s/svc-combat-training.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-combat-training
  namespace: mgo2
spec:
  clusterIP: 10.43.150.16
  clusterIPs:
  - 10.43.150.16
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5738
    protocol: TCP
    targetPort: 5738
  selector:
    app: mgo2-combat-training
  sessionAffinity: None
  type: ClusterIP
