k3s/svc-dns.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mgo2-dns","namespace":"mgo2"},"spec":{"ports":[{"port":53,"protocol":"UDP","targetPort":53}],"selector":{"app":"mgo2-dns"},"type":"ClusterIP"}}
  creationTimestamp: "2026-09-19T01:05:17Z"
  name: mgo2-dns
  namespace: mgo2
  resourceVersion: "2215"
  uid: ce231490-e7e7-4a85-8690-211cfc183a49
spec:
  clusterIP: 10.43.60.47
  clusterIPs:
  - 10.43.60.47
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 53
    protocol: UDP
    targetPort: 53
  selector:
    app: mgo2-dns
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
