k3s/svc-free-battle.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-free-battle
  namespace: mgo2
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5733
    protocol: TCP
    targetPort: 5733
  selector:
    app: mgo2-free-battle
  sessionAffinity: None
  type: LoadBalancer
