k3s/svc-gate.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-gate
  namespace: mgo2
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5731
    protocol: TCP
    targetPort: 5731
  selector:
    app: mgo2-gate
  sessionAffinity: None
  type: LoadBalancer
