k3s/svc-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-http
  namespace: mgo2
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: grpc
    port: 5743
    protocol: TCP
    targetPort: 5743
  selector:
    app: mgo2-http
  sessionAffinity: None
  type: LoadBalancer
