k3s/svc-registration.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-registration
  namespace: mgo2
spec:
  clusterIP: 10.43.80.71
  clusterIPs:
  - 10.43.80.71
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5741
    protocol: TCP
    targetPort: 5741
  selector:
    app: mgo2-registration
  sessionAffinity: None
  type: ClusterIP
