k3s/svc-replays.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-replays
  namespace: mgo2
spec:
  clusterIP: 10.43.250.175
  clusterIPs:
  - 10.43.250.175
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5734
    protocol: TCP
    targetPort: 5734
  selector:
    app: mgo2-replays
  sessionAffinity: None
  type: ClusterIP
