k3s/svc-stun.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-stun
  namespace: mgo2
spec:
  clusterIP: 10.43.12.22
  clusterIPs:
  - 10.43.12.22
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: stun
    port: 3478
    protocol: UDP
    targetPort: 3478
  - name: stun-secondary
    port: 3479
    protocol: UDP
    targetPort: 3479
  selector:
    app: mgo2-stun
  sessionAffinity: None
  type: ClusterIP
