k3s/svc-survival-hosts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-survival-hosts
  namespace: mgo2
spec:
  clusterIP: 10.43.42.75
  clusterIPs:
  - 10.43.42.75
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5739
    protocol: TCP
    targetPort: 5739
  selector:
    app: mgo2-survival-hosts
  sessionAffinity: None
  type: ClusterIP
