k3s/svc-survival.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-survival
  namespace: mgo2
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5735
    protocol: TCP
    targetPort: 5735
  selector:
    app: mgo2-survival
  sessionAffinity: None
  type: LoadBalancer
