k3s/svc-tournament.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgo2-tournament
  namespace: mgo2
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5742
    protocol: TCP
    targetPort: 5742
  selector:
    app: mgo2-tournament
  sessionAffinity: None
  type: LoadBalancer
